--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -713,11 +713,26 @@ tr.adminSeparator hr {
     margin-bottom: 10px;
     padding: 0;
 }
-span.nop-tooltip {
-    white-space: nowrap;
-}
-/* SERVER CONTROLS */
 
+.plugin-intro-table {
+	width: 100%;
+	clear: both;
+
+	td {
+		vertical-align: top;
+	}
+
+	td:first-child {
+		width: 80%;
+	}
+
+	td:last-child {
+		float: right;
+		padding-left: 14px;
+	}
+}
+
+/* SERVER CONTROLS */
 label {
     padding-left: 3px;
 }
