--- a/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/Configure.cshtml
@@ -1,56 +1,37 @@
-﻿@{
-    Layout = "";
-}
-@model PayPalStandardConfigurationModel
-@using SmartStore.PayPal.Models;
+﻿@using SmartStore.PayPal.Models;
 @using SmartStore.Web.Framework;
+@model PayPalStandardConfigurationModel
+@{
+	Layout = "";
+}
 
-<script type="text/javascript">
-	$(document).ready(function () {
-		$("#@Html.FieldIdFor(model => model.EnableIpn)").click(toggleEnableIpn);
+<table class="plugin-intro-table">
+	<tr>
+		<td>
+			<div class="alert alert-info">
+				<button class="close" data-dismiss="alert">×</button>
+				@Html.Raw(T("Plugins.Payments.PayPalStandard.AdminInstruction"))
+			</div>
+		</td>
+		<td>
+			<a href="https://www.paypal.com/" target="_blank">
+				<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
+			</a>
+		</td>
+	</tr>
+</table>
 
-		toggleEnableIpn();
-	});
-
-	function toggleEnableIpn() {
-	    if ($('#@Html.FieldIdFor(model => model.EnableIpn)').is(':checked')) {
-			$('#pnlIpnUrl').show();
-		}
-		else {
-			$('#pnlIpnUrl').hide();
-		}
-	}
-</script>
+@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 
 @using (Html.BeginForm())
 {
     <table class="adminContent configure-paypal-standard">
         <tr>
-            <td colspan="2">
-                <a href="https://www.paypal.com/" target="_blank">
-                    <img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <div class="alert alert-info fade in">
-                    <button class="close" data-dismiss="alert">x</button>
-                    @Html.Raw(T("Plugins.Payments.PayPalStandard.AdminInstruction"))
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                @Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
-            </td>
-        </tr>
-        <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.UseSandbox)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.UseSandbox)
+				@*multistore context not possible, see IPN handling*@
                 @Html.EditorFor(model => model.UseSandbox)
                 @Html.ValidationMessageFor(model => model.UseSandbox)
             </td>
@@ -60,8 +41,7 @@
                 @Html.SmartLabelFor(model => model.BusinessEmail)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.BusinessEmail)
-                @Html.EditorFor(model => model.BusinessEmail)
+                @Html.SettingEditorFor(model => model.BusinessEmail)
                 @Html.ValidationMessageFor(model => model.BusinessEmail)
             </td>
         </tr>
@@ -70,8 +50,7 @@
                 @Html.SmartLabelFor(model => model.PdtToken)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.PdtToken)
-                @Html.EditorFor(model => model.PdtToken)
+                @Html.SettingEditorFor(model => model.PdtToken)
                 @Html.ValidationMessageFor(model => model.PdtToken)
             </td>
         </tr>
@@ -80,8 +59,7 @@
                 @Html.SmartLabelFor(model => model.PdtValidateOrderTotal)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.PdtValidateOrderTotal)
-                @Html.EditorFor(model => model.PdtValidateOrderTotal)
+                @Html.SettingEditorFor(model => model.PdtValidateOrderTotal)
                 @Html.ValidationMessageFor(model => model.PdtValidateOrderTotal)
             </td>
         </tr>
@@ -90,8 +68,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFee)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.AdditionalFee)
-                @Html.EditorFor(model => model.AdditionalFee)
+                @Html.SettingEditorFor(model => model.AdditionalFee)
                 @Html.ValidationMessageFor(model => model.AdditionalFee)
             </td>
         </tr>
@@ -100,8 +77,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.AdditionalFeePercentage)
-                @Html.EditorFor(model => model.AdditionalFeePercentage)
+                @Html.SettingEditorFor(model => model.AdditionalFeePercentage)
                 @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
             </td>
         </tr>
@@ -110,8 +86,7 @@
                 @Html.SmartLabelFor(model => model.PassProductNamesAndTotals)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.PassProductNamesAndTotals)
-                @Html.EditorFor(model => model.PassProductNamesAndTotals)
+                @Html.SettingEditorFor(model => model.PassProductNamesAndTotals)
                 @Html.ValidationMessageFor(model => model.PassProductNamesAndTotals)
             </td>
         </tr>
@@ -120,24 +95,26 @@
                 @Html.SmartLabelFor(model => model.EnableIpn)
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.EnableIpn)
-                @Html.EditorFor(model => model.EnableIpn)
+                @Html.SettingEditorFor(model => model.EnableIpn)
                 @Html.ValidationMessageFor(model => model.EnableIpn)
             </td>
         </tr>
-        <tr id="pnlIpnUrl">
+        <tr class="ipn-url">
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.IpnUrl)
-                <span class="enable-ipn-hint">
-                    @T("Plugins.Payments.PayPalStandard.Fields.EnableIpn.Hint2")
-                </span>
             </td>
             <td class="adminData">
-                @Html.SettingOverrideCheckbox(model => model.IpnUrl)
-                @Html.EditorFor(model => model.IpnUrl)
+                @Html.SettingEditorFor(model => model.IpnUrl)
                 @Html.ValidationMessageFor(model => model.IpnUrl)
             </td>
         </tr>
+		<tr class="ipn-url">
+			<td colspan="2">
+				<div class="alert alert-info">
+					@T("Plugins.Payments.PayPalStandard.Fields.EnableIpn.Hint2")
+				</div>
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 &nbsp;
@@ -150,3 +127,13 @@
         </tr>
     </table>
 }
+
+<script type="text/javascript">
+	$(document).ready(function () {
+
+		$("#@Html.FieldIdFor(model => model.EnableIpn)").change(function () {
+			$('.ipn-url').toggle($(this).is(':checked'));
+		}).trigger('change');
+
+	});
+</script>
