--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
@@ -5,6 +5,7 @@
 	Layout = "";
 }
 
+@Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
 
 @using (Html.BeginForm())
 {
@@ -14,6 +15,7 @@
 				@Html.SmartLabelFor(model => model.DescriptionText)
 			</td>
 			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => model.DescriptionText)
 				@Html.TextAreaFor(model => model.DescriptionText, new { style = "width: 550px; height: 100px;" })
 				@Html.ValidationMessageFor(model => model.DescriptionText)
 			</td>
@@ -23,7 +25,7 @@
 				@Html.SmartLabelFor(model => model.AdditionalFee)
 			</td>
 			<td class="adminData">
-				@Html.EditorFor(model => model.AdditionalFee)
+				@Html.SettingEditorFor(model => model.AdditionalFee)
 				@Html.ValidationMessageFor(model => model.AdditionalFee)
 			</td>
 		</tr>
@@ -32,7 +34,7 @@
 				@Html.SmartLabelFor(model => model.AdditionalFeePercentage)
 			</td>
 			<td class="adminData">
-				@Html.EditorFor(model => model.AdditionalFeePercentage)
+				@Html.SettingEditorFor(model => model.AdditionalFeePercentage)
 				@Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
 			</td>
 		</tr>
