--- a/src/Presentation/SmartStore.Web/Content/print.css
+++ b/src/Presentation/SmartStore.Web/Content/print.css
@@ -10,10 +10,10 @@ body {
 	margin: 0 !important;
 	padding: 0 !important;
 	line-height: 1.45; 
-	font-family: Garamond,"Times New Roman", serif; 
+	font-family: Arial, sans-serif; 
 	color: #000; 
 	background: none; 
-	font-size: 14pt; 
+	font-size: 13pt; 
 }
 
 /* Headings */
@@ -30,31 +30,106 @@ p, h2, h3 { orphans: 3; widows: 3; }
 
 code { font: 12pt Courier, monospace; } 
 blockquote { margin: 1.2em; padding: 1em;  font-size: 12pt; }
-hr { background-color: #ccc; }
+hr { 
+	box-sizing: content-box; 
+	border: 0;
+	border-top: 1px solid #aaa;
+	margin: 10px 0;
+}
+
+.text-muted {
+	color: #777;
+}
+.text-left {
+	text-align: left;
+}
+.text-center {
+	text-align: center;
+}
+.text-right {
+	text-align: right;
+}
 
 /* Images */
-img { float: left; margin: 1em 1.5em 1.5em 0; max-width: 100% !important; }
+img { 
+	x-float: left; 
+	x-margin: 1em 1.5em 1.5em 0; 
+	max-width: 100% !important; 
+}
 a img { border: none; }
 
 /* Links */
-a:link, a:visited { background: transparent; font-weight: 700; text-decoration: underline; color:#333; }
-a:link[href^="http://"]:after, a[href^="http://"]:visited:after { content: " (" attr(href) ") "; font-size: 90%; }
+a:link, a:visited { 
+	background: transparent; 
+	font-weight: 700; 
+	text-decoration: underline; 
+	color:#333; 
+}
+a:link[href^="http://"]:after, a[href^="http://"]:visited:after { 
+	content: " (" attr(href) ") "; 
+	font-size: 90%; 
+}
 
-abbr[title]:after { content: " (" attr(title) ")"; }
+abbr[title]:after { 
+	content: " (" attr(title) ")"; 
+}
 
 /* Don't show linked images  */
-a[href^="http://"] {color: #000; }
-a[href$=".jpg"]:after, a[href$=".jpeg"]:after, a[href$=".gif"]:after, a[href$=".png"]:after { content: " (" attr(href) ") "; display:none; }
+a[href^="http://"] {
+	color: #000; 
+}
+a[href$=".jpg"]:after, a[href$=".jpeg"]:after, a[href$=".gif"]:after, a[href$=".png"]:after { 
+	content: " (" attr(href) ") "; 
+	display:none; 
+}
 
 /* Don't show links that are fragment identifiers, or use the `javascript:` pseudo protocol .. taken from html5boilerplate */
-a[href^="#"]:after, a[href^="javascript:"]:after {content: "";}
+a[href^="#"]:after, a[href^="javascript:"]:after {
+	content: "";
+}
 
 /* Table */
-table { margin: 1px; text-align:left; }
-th { border-bottom: 1px solid #333;  font-weight: bold; }
-td { border-bottom: 1px solid #333; }
-th,td { padding: 4px 10px 4px 0; }
-tfoot { font-style: italic; }
-caption { background: #fff; margin-bottom:2em; text-align:left; }
-thead {display: table-header-group;}
-img,tr {page-break-inside: avoid;} 
+table { 
+	x-margin: 1px; 
+	x-text-align: left; 
+}
+th { 
+	x-border-bottom: 1px solid #333;  
+	font-weight: bold; 
+}
+td { 
+	x-border-bottom: 1px solid #333; 
+}
+th, 
+td { 
+	x-padding: 4px 10px 4px 0; 
+	vertical-align: top;
+}
+tfoot { 
+	x-font-style: italic; 
+}
+caption { 
+	x-background: #fff; 
+	x-margin-bottom: 2em; 
+	x-text-align: left; 
+}
+thead {
+	display: table-header-group;
+}
+img,
+tr {
+	page-break-inside: avoid;
+} 
+
+table.bordered {
+	border-collapse: collapse;
+}
+table.bordered td,
+table.bordered th {
+	border-bottom: 1px solid #aaa;
+	padding: 12px 8px;
+}
+table.bordered th {
+	x-background-color: #e5e5e5;
+	border-bottom-width: 2px;
+}
