--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Print.Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Print.Footer.cshtml
@@ -1,7 +1,62 @@
-﻿
+﻿@model PrintableOrderDetailsModel
+@using SmartStore.Web.Models.Order;
+
 @{
     Layout = null;
+	var company = Model.MerchantCompanyInfo;
+	var bank = Model.MerchantBankAccount;
+	var contact = Model.MerchantContactData;
 }
 
-<hr style="margin-top: 100px" />
-<h3 style='margin-bottom: 100px'>Test Footer, Page: <span class='page'></span> of <span class='topage'></span></h3>
+<link rel="stylesheet" type="text/css" href="~/Content/print.css" />
+
+@*<hr />*@
+
+<table style="font-size: 9pt; width: 100%">
+	<tr>
+		<td style="width: 33%; vertical-align: top">
+			<div>@company.CompanyName</div>
+			<div>@company.Salutation @company.Title @company.Firstname @company.Lastname</div>
+			<div>@company.Street @company.Street2</div>
+			<div>@company.ZipCode @company.City</div>
+			<div>@company.CountryName, @company.StateName</div>
+		</td>
+		<td style="width: 33%; vertical-align: top">
+			<div>@T("PDFInvoice.Footer.Url", Model.StoreUrl)</div>
+			@if (contact.ContactEmailAddress.HasValue())
+			{
+				<div>@T("PDFInvoice.Footer.Mail", contact.ContactEmailAddress)</div>
+			}
+			@if (contact.CompanyTelephoneNumber.HasValue())
+			{
+				<div>@T("PDFInvoice.Footer.Fon", contact.CompanyTelephoneNumber)</div>
+			}			
+			@if (contact.CompanyFaxNumber.HasValue())
+			{
+				<div>@T("PDFInvoice.Footer.Fax", contact.CompanyFaxNumber)</div>
+			}			
+			@if (company.TaxNumber.HasValue())
+			{
+				<div>@T("PDFInvoice.TaxNumber") @company.TaxNumber</div>
+			}		
+			@if (company.VatId.HasValue())
+			{
+				<div>@T("PDFInvoice.VatId") @company.VatId</div>
+			}				
+			@if (company.CommercialRegister.HasValue())
+			{
+				<div>@T("PDFInvoice.CommercialRegisterHeading") @company.CommercialRegister</div>
+			}						
+		</td>
+		<td style="width: 33%; vertical-align: top">
+			<div>@bank.Bankname</div>
+			<div>@T("PDFInvoice.Footer.Bankcode", bank.Bankcode)</div>
+			<div>@T("PDFInvoice.Footer.AccountNumber", bank.AccountNumber)</div>
+			<div>@T("PDFInvoice.Footer.AccountHolder", bank.AccountHolder)</div>
+			<div>@T("PDFInvoice.Footer.Iban", bank.Iban)</div>
+			<div>@T("PDFInvoice.Footer.Bic", bank.Bic)</div>
+		</td>
+	</tr>
+</table>
+
+@*<h3 style='margin-bottom: 100px'>Test Footer, Page: <span class='page'></span> of <span class='topage'></span></h3>*@
