Dashboard: Order items linked with order list

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/OrderAverageReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/OrderAverageReport.cshtml
@@ -47,7 +47,16 @@
                 @foreach (var x in Model)
                 {
                     <tr>
-                        <td>@x.OrderStatus</td>
+                        <td>
+							@if (x.Url.HasValue())
+							{
+								<a href="@x.Url">@x.OrderStatus</a>
+							}
+							else
+							{
+								@x.OrderStatus
+							}
+						</td>
                         <td>@x.SumThisWeekOrders</td>
                         <td>@x.SumThisMonthOrders</td>
                         <td>@x.SumThisYearOrders</td>
