--- a/src/Presentation/SmartStore.Web/Views/Shared/_Pdf.Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Pdf.Footer.cshtml
@@ -12,7 +12,7 @@
 
 @*<hr />*@
 
-<table style="font-size: 9pt; width: 100%">
+<table style="font-size: 9pt; width: 100%; color: #888;">
 	<tr>
 		<td style="width: 33%; vertical-align: top">
 			<div>@company.CompanyName</div>
